# BattleBot-RUST

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
battlebot/: Cargo.toml
src/: main.rs  science.rs  something.rs
