[package]
name = "battlebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
rustc-std-workspace-core = "1.0.0"
libc = "0.2.140"
void = "1.0.2"
once_cell = "1.17.1"
winapi-x86_64-pc-windows-gnu = "0.4.0"
winapi-i686-pc-windows-gnu = "0.4.0"
winapi = "0.3.9"
spin_sleep = "1.1.1"
simple-signal = "1.1.1"
